k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world-service
  namespace: flask-app
spec:
  selector:
    app: flask-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
